# easyswap

./: .env  .gitignore  Cargo.toml  LICENSE.md  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
src/usdcbsv_orderbook_backend/: Cargo.toml  usdcbsv_orderbook_backend.did
src/usdcbsv_orderbook_backend/src/: block_headers.rs  block_sync.rs  bsv_parser.rs  bump_verification.rs  chain_sync.rs  chunk_allocation.rs  ckusdc_integration.rs  config.rs  data_cleanup.rs  filler_accounts.rs  getrandom_impl.rs  heartbeat.rs  lib.rs  order_management.rs  price_oracle.rs  state.rs  trade_creation.rs  trade_lifecycle.rs  types.rs  withdrawal_treasury.rs  xrc_oracle.rs
src/usdcbsv_orderbook_frontend/: index.html  package.json  tailwind.config.js
src/usdcbsv_orderbook_frontend/public/: .ic-assets.json5
src/usdcbsv_orderbook_frontend/src/: App.jsx  config.js  i18n.js  index.scss
src/usdcbsv_orderbook_frontend/src/components/: TreasuryCard.jsx
src/usdcbsv_orderbook_frontend/src/components/common/: Button.jsx  (+10 more)
src/usdcbsv_orderbook_frontend/src/contexts/: SDKProvider.jsx  ThemeContext.jsx
src/usdcbsv_orderbook_frontend/src/locales/: update_filler_keys.txt
src/usdcbsv_orderbook_frontend/src/pages/: AdminPage.jsx  AuditReportPage.jsx  DisclaimerPage.jsx  FillerDashboard.jsx  Home.jsx  MakerDashboard.jsx  OrderDetailsPage.jsx  OrderbookView.jsx  PastOrdersPage.jsx  PastTradesPage.jsx  TopUpDashboard.jsx  WalletPage.jsx
src/usdcbsv_orderbook_frontend/src/services/: broadcastService.js
src/usdcbsv_orderbook_frontend/src/utils/: ckusdc.did.js  wallet.js
(+101 files in other folders)
