[package]
name = "usdcbsv_orderbook_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-timers = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
ic-stable-structures = "0.6"
bs58 = "0.5"
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
rlp = "0.5"
num-traits = "0.2"
icrc-ledger-types = "0.1"
